[tool.poetry]
name = "qa-guru-python-5-20"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "qa_guru_python_5_20"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.3.2"
requests = "2.31.0"
allure-pytest = "^2.13.2"
jsonschema = "4.17.3"
curlify = "2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
